<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Areas.Main.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/pictureLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <com.example.juanvilla.testneon.Utils.RoundedImageView
                android:id="@+id/imgProfile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/profile_picture"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/pictureLayout"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@+id/nameLayout">

            <Button
                android:id="@+id/btnEnviarDinheiro"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_contact"
                android:background="@drawable/capsule_button"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnHistorico"
                android:layout_width="200dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/historico_de_envios"
                android:background="@drawable/capsule_button"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
