<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorPrimary"
              android:orientation="vertical"
              android:padding="@dimen/fab_margin">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
                  android:gravity="center"
                  android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_margin"
            android:layout_marginRight="10dp"
            android:padding="1dp">

            <com.example.juanvilla.testneon.Utils.RoundedImageView
                android:id="@+id/imgProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_launcher"/>
        </RelativeLayout>



        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfile"
            android:layout_centerHorizontal="true"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/email"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/txtMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/money"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>


    <View
        android:id="@+id/viewDividerDetails"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorAccent"/>

</LinearLayout>