<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryLight"
              android:padding="@dimen/fab_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_margin"
            android:padding="1dp">

            <com.example.juanvilla.testneon.Utils.RoundedImageView
                android:id="@+id/imgProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_title"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edtMoney"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/layoutMessageHeader"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/custom_border_layout"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btnEnviarDinheiro"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:background="@drawable/capsule_button"
            android:text="@string/enviar_dinheiro"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/fab_margin"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>